[gd_scene load_steps=5 format=3 uid="uid://bieaiytldqkb0"]

[ext_resource type="Script" path="res://scripts/jogoVelha.gd" id="1_386pt"]
[ext_resource type="PackedScene" uid="uid://570slmre70yr" path="res://scenes/button.tscn" id="1_n26q3"]
[ext_resource type="PackedScene" uid="uid://g52trn0ghgl2" path="res://scenes/panelPlayer.tscn" id="2_8fuv7"]
[ext_resource type="PackedScene" uid="uid://do0ehyleohgv1" path="res://scenes/panelPlayer_variacao.tscn" id="4_y7hhk"]

[node name="jogoVelha" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_386pt")

[node name="tabuleiro" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox1" type="HBoxContainer" parent="tabuleiro"]
layout_mode = 2
size_flags_vertical = 3

[node name="but1" parent="tabuleiro/HBox1" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but2" parent="tabuleiro/HBox1" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but3" parent="tabuleiro/HBox1" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="tabuleiro"]
layout_mode = 2
size_flags_vertical = 3

[node name="but4" parent="tabuleiro/HBox2" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but5" parent="tabuleiro/HBox2" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but6" parent="tabuleiro/HBox2" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="HBox3" type="HBoxContainer" parent="tabuleiro"]
layout_mode = 2
size_flags_vertical = 3

[node name="but7" parent="tabuleiro/HBox3" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but8" parent="tabuleiro/HBox3" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="but9" parent="tabuleiro/HBox3" instance=ExtResource("1_n26q3")]
layout_mode = 2

[node name="panelPlayer1" parent="." instance=ExtResource("2_8fuv7")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 188.0
offset_bottom = 185.0

[node name="panelPlayer2" parent="." instance=ExtResource("4_y7hhk")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -188.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 369.0
grow_horizontal = 0
idTema = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -208.0
offset_right = 188.0
offset_bottom = -8.0
grow_vertical = 0
alignment = 2

[node name="butReset" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 24
text = "Novo Jogo"

[connection signal="pressed" from="VBoxContainer/butReset" to="." method="novoJogo"]
